--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,7 @@ body {
     background-color: var(--white);
 }
 
-.main{
+.section{
     display: grid;
     place-items: center;
     .container {
