--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,16 @@ body {
         width: 450px;
         height: 600px;
         border-radius: 15px;
+        .search__form{
+            margin-top: 20px;
+            input {
+                border: none;
+                opacity: 0.5;
+                border-radius: 5px;
+                font-size: 2rem;
+            }
+            
+        }
         .time {
             position: absolute;
             display: flex;
@@ -38,6 +48,7 @@ body {
             width: 60px;
             height: 40px;
             margin-left: 30px;
+            text-align: center;
             background-color: transparent;
             border: none;
             font-weight: bold;
