--- a/style.css/style.css
+++ b/style.css/style.css
@@ -20,6 +20,13 @@ body {
     width: 450px;
     height: 600px;
     border-radius: 15px; }
+    .section .container .search__form {
+      margin-top: 20px; }
+      .section .container .search__form input {
+        border: none;
+        opacity: 0.5;
+        border-radius: 5px;
+        font-size: 2rem; }
     .section .container .time {
       position: absolute;
       display: flex;
@@ -34,6 +41,7 @@ body {
       width: 60px;
       height: 40px;
       margin-left: 30px;
+      text-align: center;
       background-color: transparent;
       border: none;
       font-weight: bold;
