--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,13 @@
 :root { 
     --white: #eff0f3; 
-    --gradient: linear-gradient(0deg, #536976 0%, #292e49 100%); 
+    --gradient: linear-gradient(-20deg, #536976 0%, #292e49 100%); 
     --headline-headline2: 700 1.125rem/normal Nunito; 
+}
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 html{
@@ -20,7 +26,7 @@ body {
         position: relative;
         display: flex;
         justify-content: center;
-        width: 450px;
+        width: 360px;
         height: 600px;
         border-radius: 15px;
         .search__form{
@@ -38,34 +44,53 @@ body {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 220px;
+            width: 250px;
             height: 90px;
             bottom: 30px;
             border-radius: 15px;
             background:var(--gradient);
         }
-        .div-temp input{
-            width: 60px;
-            height: 40px;
-            margin-left: 30px;
-            text-align: center;
-            background-color: transparent;
-            border: none;
-            font-weight: bold;
-            font-size: 2rem;
-            color: var(--white);
-            
-
+        .div__temp{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            img{
+                width: 40px;
+            }
+            input{
+                width: 100px;
+                height: 40px;
+                text-align: center;
+                background-color: transparent;
+                border: none;
+                font-weight: bold;
+                font-size: 4rem;
+                color: var(--white);
+                
+    
+            }
         }
-        .div-date input{
-            width: 100px;
-            height: 30px;
-            background-color: transparent;
-            border: none;
-            text-transform: uppercase;
-            font-weight: bold;
-            color: var(--white);
-            font-size: 1.5rem;
+        .div__date {
+            margin-left: 10px;
+            text-align: center;
+            .city{
+                display: flex;
+                .icon__city{
+                    width: 14px;
+                    margin-right: 5px;
+                    filter: brightness(4.25);
+                }
+            }
+            input{
+                width: 120px;
+                height: 30px;
+                background-color: transparent;
+                border: none;
+                font-weight: bold;
+                color: var(--white);
+                font-size: 1.4rem;
+            }
         }
     }
 }
