--- a/style/style.scss
+++ b/style/style.scss
@@ -1,98 +1,127 @@
-:root { 
-    --white: #eff0f3; 
-    --gradient: linear-gradient(-20deg, #536976 0%, #292e49 100%); 
-    --headline-headline2: 700 1.125rem/normal Nunito; 
+:root {
+  --white: #eff0f3;
+  --gradient: linear-gradient(-20deg, #536976 0%, #292e49 100%);
+  --headline-headline2: 700 1.125rem / normal Nunito;
 }
 
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 
 body {
-    font: var(--headline-headline2);
-    background-color: var(--white);
+  font: var(--headline-headline2);
+  background-color: var(--white);
 }
 
-.section{
-    display: grid;
-    place-items: center;
-    .container {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        width: 360px;
-        height: 600px;
-        border-radius: 15px;
-        .search__form{
-            margin-top: 20px;
-            input {
-                border: none;
-                opacity: 0.5;
-                border-radius: 5px;
-                font-size: 2rem;
-            }
-            
-        }
-        .time {
-            position: absolute;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 250px;
-            height: 90px;
-            bottom: 30px;
-            border-radius: 15px;
-            background:var(--gradient);
-        }
-        .div__temp{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            img{
-                width: 40px;
-            }
-            input{
-                width: 100px;
-                height: 40px;
-                text-align: center;
-                background-color: transparent;
-                border: none;
-                font-weight: bold;
-                font-size: 4rem;
-                color: var(--white);
-                
-    
-            }
-        }
-        .div__date {
-            margin-left: 10px;
-            text-align: center;
-            .city{
-                display: flex;
-                align-items: center;
-                .icon__city{
-                    width: 14px;
-                    height: 14px;
-                    margin-right: 5px;
-                    filter: brightness(4.25);
-                }
-            }
-            input{
-                width: 120px;
-                height: 30px;
-                background-color: transparent;
-                border: none;
-                font-weight: bold;
-                color: var(--white);
-                font-size: 1.4rem;
-            }
-        }
+.section {
+  display: grid;
+  place-items: center;
+  .main__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background: radial-gradient(circle, rgba(171,171,247,1) 0%, rgba(0,212,255,1) 100%);
+    width: 360px;
+    height: 600px;
+    border-radius: 15px;
+    align-items: center;
+    justify-content: space-evenly;
+    .input {
+      background-color: transparent;
+      border: none;
     }
+    .country__input {
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      font-size: 2.8rem;
+    }
+    .weather__logo {
+      width: 200px;
+      height: 200px;
+    }
+    .temp__input {
+      text-align: center;
+      color: white;
+      font-size: 12rem;
+      font-weight: bold;
+    }
+    .description {
+      color: white;
+      font-weight: bold;
+      font-size: 2.5rem;
+      text-align: center;
+    }
+
+
+
+    .search__form {
+      margin-top: 20px;
+      input {
+        border: none;
+        opacity: 0.5;
+        border-radius: 5px;
+        font-size: 2rem;
+      }
+    }
+    .time {
+      position: absolute;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 250px;
+      height: 90px;
+      bottom: 30px;
+      border-radius: 15px;
+      background: var(--gradient);
+    }
+    .div__temp {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      img {
+        width: 40px;
+      }
+      input {
+        width: 100px;
+        height: 40px;
+        text-align: center;
+        background-color: transparent;
+        border: none;
+        font-weight: bold;
+        font-size: 4rem;
+        color: var(--white);
+      }
+    }
+    .div__date {
+      margin-left: 10px;
+      text-align: center;
+      .city {
+        display: flex;
+        align-items: center;
+        .icon__city {
+          width: 14px;
+          height: 14px;
+          margin-right: 5px;
+          filter: brightness(4.25);
+        }
+      }
+      input {
+        width: 120px;
+        height: 30px;
+        background-color: transparent;
+        border: none;
+        font-weight: bold;
+        color: var(--white);
+        font-size: 1.4rem;
+      }
+    }
+  }
 }
