--- a/style/style.scss
+++ b/style/style.scss
@@ -19,17 +19,20 @@ body {
   background-color: var(--white);
 }
 
-.section {
-  display: grid;
-  place-items: center;
+.container {
+  margin: 0 auto;
+  width: 400px;
+  background: radial-gradient(circle, rgba(4,20,33,1) 0%, rgba(8,25,43,1) 100%);
+  
   .main__container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    margin: 0 auto;
+    gap: 5px;
     background: radial-gradient(circle, rgba(171,171,247,1) 0%, rgba(0,212,255,1) 100%);
     width: 360px;
     height: 600px;
-    border-radius: 15px;
+    border-radius: 20px;
     align-items: center;
     justify-content: space-evenly;
     .input {
@@ -48,6 +51,7 @@ body {
     }
     .temp__input {
       text-align: center;
+      max-width: 300px;
       color: white;
       font-size: 12rem;
       font-weight: bold;
@@ -58,69 +62,76 @@ body {
       font-size: 2.5rem;
       text-align: center;
     }
-
-
-
-    .search__form {
-      margin-top: 20px;
-      input {
-        border: none;
-        opacity: 0.5;
-        border-radius: 5px;
-        font-size: 2rem;
-      }
+    .date__input {
+      color: white;
+      text-align: center;
+      font-size: 1.5rem;
     }
-    .time {
-      position: absolute;
+    .today__container {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 250px;
-      height: 90px;
-      bottom: 30px;
-      border-radius: 15px;
-      background: var(--gradient);
+      width: 100%;
+      justify-content: space-evenly;
+      border-top: 1px solid #6ac5ff;
+
+
+      padding-top: 20px;
     }
-    .div__temp {
+    .item__container {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       align-items: center;
-      img {
-        width: 40px;
+    }
+    .item__container-logo {
+      width: 30px;
+    }
+    .item__container-text {
+      background: transparent;
+      color: white;
+      border: none;
+      font-weight: bold;
+      width: 100px;
+      text-align: center;
+    }
+    .item__container-description {
+      background: transparent;
+      color: rgb(232, 229, 241);
+      font-weight: bold;
+      border: none;
+      text-align: center;
+      width: 100px;
+    }
+
+
+  }
+  .footer__container {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
+    .subtitle__container {
+      display: flex;
+      justify-content: space-between;
+      margin: 20px;
+      .subtitle {
+        font-size: 2rem;
       }
-      input {
-        width: 100px;
-        height: 40px;
-        text-align: center;
-        background-color: transparent;
-        border: none;
-        font-weight: bold;
-        font-size: 4rem;
-        color: var(--white);
+      .view__more {
+        font-size: 1.5rem;
       }
     }
-    .div__date {
-      margin-left: 10px;
-      text-align: center;
-      .city {
+    .timeLapsItem__container {
+      display: flex;
+      justify-content: space-evenly;
+      .item__container {
         display: flex;
+        flex-direction: column;
         align-items: center;
-        .icon__city {
-          width: 14px;
-          height: 14px;
-          margin-right: 5px;
-          filter: brightness(4.25);
+        border: 1px solid white;
+        border-radius: 20px;
+        padding: 10px;
+        .hour__item {
+          color: gray;
         }
-      }
-      input {
-        width: 120px;
-        height: 30px;
-        background-color: transparent;
-        border: none;
-        font-weight: bold;
-        color: var(--white);
-        font-size: 1.4rem;
       }
     }
   }
