cambio de clases en botones

--- a/style/style.scss
+++ b/style/style.scss
@@ -37,6 +37,17 @@ body {
     border-radius: 20px;
     align-items: center;
     padding: 20px 0;
+    position: relative;
+    .back__button {
+      display: none;
+      background: transparent;
+      color: white;
+      font-size: 3rem;
+      border: none;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
     .span {
       background-color: transparent;
       border: none;
