--- a/style.css/style.css
+++ b/style.css/style.css
@@ -74,20 +74,20 @@ body {
       justify-content: space-evenly;
       border-top: 1px solid #6ac5ff;
       padding-top: 20px; }
-    .container .main__container .item__container {
+    .container .main__container .mainItems__container {
       display: flex;
       flex-direction: column;
       align-items: center; }
-    .container .main__container .item__container-logo {
+    .container .main__container .mainItems__icon {
       width: 30px; }
-    .container .main__container .item__container-text {
+    .container .main__container .mainItems__percentage {
       background: transparent;
       color: white;
       border: none;
       font-weight: bold;
       width: 100px;
       text-align: center; }
-    .container .main__container .item__container-description {
+    .container .main__container .mainItems__description {
       background: transparent;
       color: #e8e5f1;
       font-weight: bold;
@@ -109,24 +109,24 @@ body {
     .container .footer__container .timeLapsItem__container {
       display: flex;
       justify-content: space-evenly; }
-      .container .footer__container .timeLapsItem__container .item__container {
+      .container .footer__container .timeLapsItem__container .weatherToday__container {
         display: flex;
         flex-direction: column;
         align-items: center;
         border: 1px solid white;
         border-radius: 20px;
         padding: 10px; }
-        .container .footer__container .timeLapsItem__container .item__container .hour__item {
+        .container .footer__container .timeLapsItem__container .weatherToday__container .weatherToday__hour {
           color: gray; }
-    .container .footer__container .items__container {
+    .container .footer__container .viewMore__container {
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
-      height: 100%; }
-      .container .footer__container .items__container .item__container {
+      height: 100%;
+      justify-content: space-evenly; }
+      .container .footer__container .viewMore__container .viewMoreItem__container {
         display: flex;
         justify-content: space-between;
-        margin: 10px; }
+        margin: 0 10px; }
   .container .main__container-reduce {
     gap: 5px; }
   .container .footer__container-deploy {
