--- a/style/style.scss
+++ b/style/style.scss
@@ -89,15 +89,15 @@ body {
 
       padding-top: 20px;
     }
-    .item__container {
+    .mainItems__container {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-    .item__container-logo {
+    .mainItems__icon {
       width: 30px;
     }
-    .item__container-text {
+    .mainItems__percentage {
       background: transparent;
       color: white;
       border: none;
@@ -105,7 +105,7 @@ body {
       width: 100px;
       text-align: center;
     }
-    .item__container-description {
+    .mainItems__description {
       background: transparent;
       color: rgb(232, 229, 241);
       font-weight: bold;
@@ -136,27 +136,39 @@ body {
     .timeLapsItem__container {
       display: flex;
       justify-content: space-evenly;
-      .item__container {
+      .weatherToday__container {
         display: flex;
         flex-direction: column;
         align-items: center;
         border: 1px solid white;
         border-radius: 20px;
         padding: 10px;
-        .hour__item {
+        .weatherToday__hour {
           color: gray;
         }
       }
     }
-    .items__container {
+    // .items__container {
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: space-evenly;
+    //   height: 100%;
+    //   .item__container {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     margin: 10px;
+    //   }
+    // }
+    .viewMore__container {
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
       height: 100%;
-      .item__container {
+      justify-content: space-evenly;
+      .viewMoreItem__container {
         display: flex;
         justify-content: space-between;
-        margin: 10px;
+        margin: 0 10px;
+        
       }
     }
    
