--- a/style.css/style.css
+++ b/style.css/style.css
@@ -126,9 +126,22 @@ body {
       .container .footer__container .viewMore__container .viewMoreItem__container {
         display: flex;
         justify-content: space-between;
-        margin: 0 10px; }
+        margin: 0 10px;
+        align-items: center; }
+        .container .footer__container .viewMore__container .viewMoreItem__container .weather__container {
+          display: flex;
+          align-items: center;
+          gap: 10px; }
   .container .main__container-reduce {
     gap: 5px; }
+    .container .main__container-reduce .weather__container {
+      display: flex;
+      gap: 10px; }
+      .container .main__container-reduce .weather__container .dateInfo__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between; }
   .container .footer__container-deploy {
     height: 100%; }
 
