--- a/style/style.scss
+++ b/style/style.scss
@@ -168,16 +168,32 @@ body {
         display: flex;
         justify-content: space-between;
         margin: 0 10px;
-        
+        align-items: center;
+        .weather__container {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+        }
       }
     }
    
   }
   .main__container-reduce {
-    gap: 5px
+    gap: 5px;
+    .weather__container {
+      display: flex;
+      gap: 10px;
+      .dateInfo__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+      }
+    }
   }
   .footer__container-deploy {
     height: 100%;
+    
   }
 }
 
