--- a/style.css/style.css
+++ b/style.css/style.css
@@ -13,27 +13,29 @@ html {
 
 body {
   font: var(--headline-headline2);
-  background-color: var(--white); }
+  background-color: black; }
 
-.container {
+.app {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
   min-width: 360px;
+  max-width: 600px;
+  align-items: center;
   background: radial-gradient(circle, #041421 0%, #08192b 100%); }
-  .container .main__container {
+  .app .main__container {
     display: flex;
     flex-direction: column;
+    width: 100%;
     margin: 0 10px;
     gap: 10px;
     background: radial-gradient(circle, #ababf7 0%, #00d4ff 100%);
-    max-width: 450px;
     border-radius: 20px;
     align-items: center;
     padding: 20px 0;
     position: relative; }
-    .container .main__container .search__button {
+    .app .main__container .search__button {
       position: absolute;
       left: 5px;
       top: 5px;
@@ -41,142 +43,96 @@ body {
       border: none;
       object-fit: cover;
       cursor: pointer; }
-    .container .main__container .back__button {
-      display: none;
-      background: transparent;
-      color: white;
-      font-size: 4rem;
-      border: none;
-      position: absolute;
-      left: 5px;
-      top: 10px; }
-    .container .main__container .span {
-      background-color: transparent;
-      border: none; }
-    .container .main__container .country {
+    .app .main__container .location {
       text-align: center;
       color: white;
       font-weight: bold;
       font-size: 2.8rem; }
-    .container .main__container .weather__logo {
+    .app .main__container .weather__icon {
       width: 200px;
       height: 200px; }
-    .container .main__container .temperature {
+    .app .main__container .temperature {
       text-align: center;
       max-width: 300px;
       color: white;
       font-size: 12rem;
       font-weight: bold; }
-    .container .main__container .description {
+    .app .main__container .description {
       color: white;
       font-weight: bold;
       font-size: 3rem;
       text-align: center; }
-    .container .main__container .date {
+    .app .main__container .day {
       color: white;
       text-align: center;
       font-size: 1.5rem; }
-    .container .main__container .today__container {
+    .app .main__container .infoToday__container {
       display: flex;
-      width: 100%;
-      justify-content: space-evenly;
-      border-top: 1px solid #6ac5ff;
-      padding-top: 20px; }
-    .container .main__container .mainItems__container {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      align-items: center; }
-      .container .main__container .mainItems__container .mainItems__percentage {
-        background: transparent;
-        color: white;
-        border: none;
-        font-weight: bold;
-        font-size: 1.5rem;
-        width: 100px;
-        text-align: center; }
-      .container .main__container .mainItems__container .mainItems__description {
-        background: transparent;
-        color: #e8e5f1;
-        font-weight: bold;
-        font-size: 1.5rem;
-        border: none;
-        text-align: center;
-        width: 100px; }
-    .container .main__container .mainItems__icon {
-      width: 30px; }
-  .container .footer__container {
-    color: white;
-    padding-bottom: 20px;
-    max-width: 470px; }
-    .container .footer__container .subtitle__container {
+      justify-content: space-between; }
+      .app .main__container .infoToday__container .weatherToday__container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        width: 100%;
+        justify-content: space-evenly;
+        border-top: 1px solid #6ac5ff;
+        padding-top: 20px; }
+        .app .main__container .infoToday__container .weatherToday__container img {
+          width: 50px;
+          order: -1; }
+  .app .footer__container {
+    width: 100%; }
+    .app .footer__container .footerSubtitle__container {
       display: flex;
       justify-content: space-between;
-      margin: 20px 10px; }
-      .container .footer__container .subtitle__container .subtitle {
-        font-size: 2rem; }
-      .container .footer__container .subtitle__container .view__more {
-        font-size: 1.6rem;
-        background-color: transparent;
+      margin: 10px;
+      color: white;
+      font-size: 1.5rem; }
+      .app .footer__container .footerSubtitle__container .footer-nextDays {
+        background: transparent;
         color: white;
-        border: none;
         font-weight: bold;
+        border: none;
         cursor: pointer; }
-    .container .footer__container .timeLapsItem__container {
+      .app .footer__container .footerSubtitle__container .footer__today {
+        color: white;
+        font-size: 2rem;
+        padding-left: 10px; }
+    .app .footer__container .nextHours__container {
       display: flex;
-      justify-content: space-evenly; }
-      .container .footer__container .timeLapsItem__container .weatherToday__container {
+      justify-content: space-between;
+      color: white; }
+      .app .footer__container .nextHours__container .nextHour__container {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        border: 1px solid white;
-        border-radius: 20px;
-        padding: 10px; }
-        .container .footer__container .timeLapsItem__container .weatherToday__container .weatherToday__hour {
-          color: gray; }
-    .container .footer__container .viewMore__container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      justify-content: space-evenly; }
-      .container .footer__container .viewMore__container .viewMoreItem__container {
-        display: flex;
-        justify-content: space-between;
-        margin: 0 10px;
         align-items: center; }
-        .container .footer__container .viewMore__container .viewMoreItem__container .weather__container {
+    .app .footer__container .nextDays__container {
+      font-size: 1.5rem; }
+      .app .footer__container .nextDays__container .nextDay__container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        color: white; }
+        .app .footer__container .nextDays__container .nextDay__container .nextDayDescription__container {
           display: flex;
           align-items: center;
+          margin: 0 auto; }
+        .app .footer__container .nextDays__container .nextDay__container .maxmin__container {
+          display: flex;
+          justify-content: flex-end;
           gap: 10px; }
-        .container .footer__container .viewMore__container .viewMoreItem__container .max__temp {
-          font-size: 2rem; }
-  .container .main__container-reduce {
-    gap: 5px; }
-    .container .main__container-reduce .weather__container {
-      display: flex;
-      gap: 10px; }
-      .container .main__container-reduce .weather__container .dateInfo__container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly; }
-  .container .footer__container-deploy {
-    height: 100%; }
-
-@media (min-width: 470px) {
-  .container .main__container, .container .footer__container {
-    margin: 0 auto;
-    width: 450px; } }
-
-@media (max-width: 600px) and (min-height: 800px) {
-  .container {
-    height: 100%; }
-    .container .main__container {
-      gap: 30px; }
-    .container .main__container-reduce {
-      gap: 5px; } }
-
-@media (min-width: 800px) {
-  .container {
-    flex-direction: row;
-    height: 100vh; } }
+  @media (min-width: 470px) {
+    .app .container .main__container,
+    .app .container .footer__container {
+      margin: 0 auto;
+      width: 450px; } }
+  @media (max-width: 600px) and (min-height: 800px) {
+    .app .container {
+      height: 100%; }
+      .app .container .main__container {
+        gap: 30px; } }
+  @media (min-width: 800px) {
+    .app .container {
+      flex-direction: row;
+      height: 100vh; } }
