--- a/style.css/style.css
+++ b/style.css/style.css
@@ -20,6 +20,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 0 10px;
   min-width: 360px;
   max-width: 600px;
   align-items: center;
@@ -28,22 +29,29 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 0 10px;
     gap: 10px;
     background: radial-gradient(circle, #ababf7 0%, #00d4ff 100%);
-    border-radius: 20px;
+    box-shadow: 0px 21px 22px -15px rgba(0, 212, 255, 0.61);
+    -webkit-box-shadow: 0px 21px 22px -15px rgba(0, 212, 255, 0.61);
+    -moz-box-shadow: 0px 21px 22px -15px rgba(0, 212, 255, 0.61);
+    border-radius: 0 0 20px 20px;
     align-items: center;
     padding: 20px 0;
     position: relative; }
-    .app .main__container .search__button {
-      position: absolute;
-      left: 5px;
-      top: 5px;
-      background-color: transparent;
-      border: none;
-      object-fit: cover;
-      cursor: pointer; }
-    .app .main__container .location {
+    .app .main__container .location__container .search__form {
+      display: none;
+      justify-content: space-between;
+      align-items: center;
+      gap: 5px; }
+      .app .main__container .location__container .search__form .search__button {
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        background-color: transparent;
+        border: none;
+        object-fit: cover;
+        cursor: pointer; }
+    .app .main__container .location__container .location {
       text-align: center;
       color: white;
       font-weight: bold;
@@ -51,12 +59,17 @@ body {
     .app .main__container .weather__icon {
       width: 200px;
       height: 200px; }
-    .app .main__container .temperature {
-      text-align: center;
-      max-width: 300px;
-      color: white;
-      font-size: 12rem;
-      font-weight: bold; }
+    .app .main__container .temperature__container {
+      position: relative; }
+      .app .main__container .temperature__container .temperature {
+        color: white;
+        font-size: 12rem;
+        font-weight: bold; }
+      .app .main__container .temperature__container .degrees {
+        font-size: 8rem;
+        color: white;
+        position: absolute;
+        top: 10px; }
     .app .main__container .description {
       color: white;
       font-weight: bold;
@@ -68,7 +81,9 @@ body {
       font-size: 1.5rem; }
     .app .main__container .infoToday__container {
       display: flex;
-      justify-content: space-between; }
+      justify-content: space-between;
+      width: 100%;
+      color: white; }
       .app .main__container .infoToday__container .weatherToday__container {
         display: flex;
         flex-direction: column;
@@ -83,17 +98,28 @@ body {
           order: -1; }
   .app .footer__container {
     width: 100%; }
+    .app .footer__container .back__button {
+      margin: 20px 0 10px 5px;
+      background: transparent;
+      color: white;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+      display: none; }
     .app .footer__container .footerSubtitle__container {
       display: flex;
       justify-content: space-between;
       margin: 10px;
       color: white;
       font-size: 1.5rem; }
+      .app .footer__container .footerSubtitle__container .footer-today {
+        font-size: 2.3rem; }
       .app .footer__container .footerSubtitle__container .footer-nextDays {
         background: transparent;
         color: white;
         font-weight: bold;
         border: none;
+        color: darkgray;
         cursor: pointer; }
       .app .footer__container .footerSubtitle__container .footer__today {
         color: white;
@@ -102,11 +128,21 @@ body {
     .app .footer__container .nextHours__container {
       display: flex;
       justify-content: space-between;
+      margin: 20px 20px;
       color: white; }
       .app .footer__container .nextHours__container .nextHour__container {
         display: flex;
+        gap: 5px;
         flex-direction: column;
-        align-items: center; }
+        align-items: center;
+        border: 1px solid darkgray;
+        border-radius: 20%;
+        padding: 10px; }
+        .app .footer__container .nextHours__container .nextHour__container .weatherToday__subtitle {
+          color: white;
+          font-size: 1.5rem; }
+        .app .footer__container .nextHours__container .nextHour__container .weatherToday__description {
+          color: darkgray; }
     .app .footer__container .nextDays__container {
       font-size: 1.5rem; }
       .app .footer__container .nextDays__container .nextDay__container {
@@ -114,6 +150,8 @@ body {
         grid-template-columns: 1fr 1fr 1fr;
         align-items: center;
         color: white; }
+        .app .footer__container .nextDays__container .nextDay__container .nextDay-day {
+          padding-left: 10px; }
         .app .footer__container .nextDays__container .nextDay__container .nextDayDescription__container {
           display: flex;
           align-items: center;
@@ -121,7 +159,14 @@ body {
         .app .footer__container .nextDays__container .nextDay__container .maxmin__container {
           display: flex;
           justify-content: flex-end;
-          gap: 10px; }
+          gap: 10px;
+          padding-right: 10px;
+          align-items: center; }
+          .app .footer__container .nextDays__container .nextDay__container .maxmin__container .temperature-max {
+            font-size: 1.7rem; }
+          .app .footer__container .nextDays__container .nextDay__container .maxmin__container .temperature-min {
+            font-size: 1.5rem;
+            color: gray; }
   @media (min-width: 470px) {
     .app .container .main__container,
     .app .container .footer__container {
