--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,4 @@
 @import './layout/footer';
 @import './layout/nextHours';
 @import './layout/nextDays';
-@import './themes/backgrounds';
+@import './themes/backAnimate';
