--- a/scss/layout/_mainToday.scss
+++ b/scss/layout/_mainToday.scss
@@ -78,7 +78,7 @@
   .weatherIcon__container {
     width: 200px;
     height: 200px;
-    .weather__icon {
+    img {
       width: 100%;
     }
   }
