--- a/scss/themes/_backAnimate.scss
+++ b/scss/themes/_backAnimate.scss
@@ -57,7 +57,7 @@
     }
   }
   &.back__sunny {
-    .brightning {
+    .brightening {
       position: absolute;
       top: 131px;
       left: 0;
