Add mobile font-size

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,8 +1,11 @@
 :root {
   --font-box: 1.8rem;
+  --font-box-mobile: 1.5rem;
   --font-title: 5rem;
   --font-subtitle: 3.5rem;
+  --font-subtitle-mobile: 3rem;
   --font-buttons: 2.4rem;
+  --font-buttons-mobile: 2rem;
 
   --gradient: linear-gradient(-20deg, #536976 0%, #292e49 100%);
 }
