Add mq for 425px

--- a/scss/layout/_infoTodayContainer.scss
+++ b/scss/layout/_infoTodayContainer.scss
@@ -18,3 +18,12 @@
     }
   }
 }
+
+@include mqMax(425px) {
+  .infoToday__container {
+    font-size: 1.4rem;
+    .weatherToday__container img {
+      width: 40px;
+    }
+  }
+}
