--- a/scss/layout/_mainToday.scss
+++ b/scss/layout/_mainToday.scss
@@ -77,7 +77,7 @@
   }
   .weatherIcon__container {
     width: 200px;
-    height: 200px;
+    margin-bottom: 20px;
     img {
       width: 100%;
     }
@@ -108,5 +108,23 @@
     color: white;
     text-align: center;
     font-size: 2rem;
+  }
+}
+
+@include mqMax(425px) {
+  .main__container {
+    .weatherIcon__container {
+      width: 160px;
+      margin: 20px 0;
+    }
+    .temperature__container .temperature {
+      font-size: 7rem;
+      ::after {
+        font-size: 5rem;
+      }
+    }
+    .description {
+      font-size: 4rem;
+    }
   }
 }
